objects/Lead.object
<CustomObject
     >
    <description n1:nil="true" />
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_0002086__c</fullName>
        <label>US-0002086</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>controllingfield__c</fullName>
        <label>controllingfield</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>controlling1</fullName>
                </value>
                <value>
                    <fullName>controlling2</fullName>
                </value>
                <value>
                    <fullName>controlling3</fullName>
                </value>
                <value>
                    <fullName>controlling4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dependent__c</fullName>
        <label>dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dependent1</fullName>
                </value>
                <value>
                    <fullName>Dependent2</fullName>
                </value>
                <value>
                    <fullName>Dependent3</fullName>
                </value>
                <value>
                    <fullName>Dependent4</fullName>
                </value>
                <value>
                    <fullName>Dependent5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dependentfield__c</fullName>
        <label>dependentfield</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controllingfield__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dependent1</fullName>
                </value>
                <value>
                    <fullName>dependent2</fullName>
                </value>
                <value>
                    <fullName>dependent3</fullName>
                </value>
                <value>
                    <fullName>dependent4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <isCaseInsensitiveDeterministicEncryptionEnabled>true</isCaseInsensitiveDeterministicEncryptionEnabled>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Testqueue2_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Testqueue2</label>
        <queue>Testqueue2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>testqueue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>testqueue</label>
        <queue>testqueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField n1:nil="true" />
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>testvalidationrule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(Address),
OR(NOT ISNULL(City),
			NOT ISNULL(Country)))</errorConditionFormula>
        <errorMessage>address cannot be null</errorMessage>
    </validationRules>
</CustomObject>